force-app/main/default/objects/Commission_Statement__c/Commission_Statement__c.object-meta.xml
<CustomObject>
    <description>Calculated commission statements for tracking payouts and clawbacks</description>
    <label>Commission Statement</label>
    <nameField>
        <displayFormat>COMM-{000000}</displayFormat>
        <label>Statement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>