force-app/main/default/objects/Commission_Statement__c/fields/Clawback_Reference__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to original statement if this is a clawback</description>
    <label>Clawback Reference</label>
    <referenceTo>Commission_Statement__c</referenceTo>
    <relationshipLabel>Clawback Statements</relationshipLabel>
    <relationshipName>Clawback_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>