force-app/main/default/objects/Commission_Statement__c/fields/Commission_Plan__c.field-meta.xml
<CustomField>
    <fullName>Commission_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commission plan used for calculation</description>
    <label>Commission Plan</label>
    <referenceTo>Commission_Plan__c</referenceTo>
    <relationshipLabel>Commission Statements</relationshipLabel>
    <relationshipName>Commission_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>