force-app/main/default/objects/Commission_Statement__c/fields/Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Amount__c</fullName>
    <description>Original opportunity amount</description>
    <label>Deal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>