force-app/main/default/objects/Commission_Statement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source opportunity for this commission</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commission Statements</relationshipLabel>
    <relationshipName>Commission_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>