force-app/main/default/objects/Commission_Statement__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who earns this commission</description>
    <label>Payee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Commission Statements</relationshipLabel>
    <relationshipName>Commission_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>