force-app/main/default/objects/Commission_Statement__c/fields/Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rate_Applied__c</fullName>
    <description>Commission rate that was applied</description>
    <label>Rate Applied</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>