force-app/main/default/objects/Commission_Statement__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role for which this commission was calculated</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
                <default>true</default>
                <label>Sales Rep</label>
            </value>
            <value>
                <fullName>Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>